--- a/portfolio/css/media.css
+++ b/portfolio/css/media.css
@@ -148,7 +148,7 @@
 #forum_list a:last-of-type {border-right: none;}
 #forum_list:hover {
     transform: scale(1.01);
-    transition:  all 5s;
+    transition:  all 1s;
    
 }
 #forum_list:hover::before {
@@ -223,7 +223,7 @@
     left:0;
     right:0;
     z-index: -99;
-    border-radius: 8%;
+    border-radius: 50px;
     overflow: auto;
     list-style-type: none;
     -ms-overflow-style: none; 
@@ -254,12 +254,34 @@
 .skill_css,
 .skill_html,
 .skill_js{
-width: 80px;  
+width: 60px;  
 margin: 10px 10px 30px;
 }
+.skill_jq{
+    width:170px;
+    height:50px;
+
+}
+.skill_blender{
+    width:170px;
+    height:50px;
+    
+}
+.skill_sql{
+    width:180px;
+    height:60px;
+}
 .skill_three{
+    width:180px;
+    height:60px;
+}
+.skill_react{
     width:190px;
     height:60px;
+}
+.skill_php{
+    width:155px;
+    height:100px;
 }
 .skico{
     margin: 10px 10px 30px;
@@ -274,43 +296,44 @@ margin: 10px 10px 30px;
     transition: all 5s;
     background-color: #ffffff;
     border-radius: 20%;
-    width: 80px;  
     box-shadow:5px 5px 40px 45px #ffffff;}
 .skill_html:hover{ 
     background-color: #ffffff;
     border-radius: 20%;
-    width: 80px;  
     box-shadow:5px 5px 40px 45px #ffffff;}
 .skill_js:hover{ 
     background-color: #ffffff;
     border-radius: 20%;
-    width: 80px;  
     box-shadow:5px 5px 40px 45px #ffffff;}
 .skill_jq:hover{ 
     background-color: #ffffff;
     border-radius: 20%;
-    width: 270px;  
     box-shadow:5px 5px 40px 45px #ffffff;}
 .skill_blender:hover{
     background-color: #ffffff;
     border-radius: 20%;
-    width: 270px;  
     box-shadow:5px 5px 40px 45px #ffffff;}
 .skill_sql:hover{
     background-color: #ffffff;
     border-radius: 20%;
-    width: 170px;  
     box-shadow:5px 5px 40px 45px #ffffff;}
 .skill_three:hover{
     background-color: #ffffff;
     border-radius: 20%;
-    width: 190px;  
     box-shadow:5px 5px 20px 45px #ffffff;}
 .skill_git:hover{
     background-color: #ffffff;
     border-radius: 20%;
-    width: 140px;  
     box-shadow:5px 5px 20px 25px #ffffff;}
+    .skill_react:hover{
+        background-color: #ffffff;
+        border-radius: 20%;
+        width: 190px;  
+        box-shadow:5px 5px 20px 25px #ffffff;}
+        .skill_php:hover{
+            background-color: #ffffff;
+            border-radius: 20%;
+            box-shadow:5px 5px 20px 25px #ffffff;}
         
     .git{
         left:-3%;
@@ -360,16 +383,18 @@ margin: 10px 10px 30px;
         left:-5%;
     }
     #skilldiv{
-        margin-right: 20%;
+        margin-right: 25%;
         width:80%;
     }
     .skill_css,
 .skill_html,
 .skill_js{
-width: 65px;  
+width: 50px;  
 margin: 10px 10px 30px;
 }
-    
+.skico{
+    margin-bottom:10px;
+}
 
 }
 @media all and (max-width: 720px) {
